Adding in some finishing details

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <span class="probootstrap-caption">The Groom</span>
               <h2 class="text-center">Peter Stewart</h2>
               <p>Peter is Irish, bookish, and tall. His hobbies include reading, aikido, and avoiding shops. He would like to point out that Helena is good-looking in a rather obvious way whereas his charms are more nuanced. He would like to thank all his friends and family for their advice on wedding traditions, without which the wedding would have been planned in half the time. </p>
-    <p>"I love your feet because they have wandered over the earth and through the wind and water until they brought you to me." —Pablo Neruda, Your Feet</p>
+    <p>"By all means marry. If you get a good wife, you'll be happy - if you get a bad one, you'll become a philosopher." —Socrates</p>
             </div>
 
             <div class="probootstrap-divider probootstrap-animate"><span>&amp;</span></div>
@@ -95,7 +95,7 @@
               <span class="probootstrap-caption">The Bride</span>
               <h2 class="text-center">Helena Kolberg</h2>
               <p>Hailing from Estonia, Helena moved to Scotland for her last year of high school. Her hobbies include reading, surpassing Peter in aikido and dragging him into shops. She spends the rest of her time doing normal Estonian things: running barefoot through forests, singing duets with birds, nursing deer back to health, etc. She is aware of your vegan jokes but can’t hear them from way up here on the moral high ground. </p>
-    <p>"I think I'd miss you even if we'd never met." —Nick, character from The Wedding Date</p>
+    <p>"What the world needs is more love and less paperwork" —Pearl Bailey</p>
             </div>
 
           </div>
@@ -110,7 +110,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 probootstrap-animate">  
-            <p><img src="img2/img_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive img-rounded"></p>
+            <p ><img src="img2/Church.png" alt="Free Bootstrap Template by uicookies.com" href="http://www.welovedonegal.com/ch-stmarys-lagg-malin-head-inishowen.html" class="img-responsive img-rounded"></p>
             <h3>Wedding Ceremony</h3>
             <p>The ceremony will be held 13:00hrs on Wednesday 31st July at St Mary’s chapel in Lagg, Inishowen – near Malin Head, one of the northernmost points of Ireland.</p>
           </div>
@@ -122,6 +122,8 @@
         </div>
       </div>
     </div>
+      
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55557.21078252784!2d-7.37664309337189!3d55.32148831253202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488aab218b88b4f7%3A0x67b30ce74a08dbf3!2sSt+Mary&#39;s%2C+Lag!5e0!3m2!1sen!2sus!4v1560027739929!5m2!1sen!2sus" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d71749.02823624929!2d-7.458393447966321!3d55.285640078922874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48f555710487572d%3A0x6af5d82ec4443b6!2sBallyliffin+Lodge+%26+Spa!5e0!3m2!1sen!2sie!4v1547917486081" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
