--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
       <div class="container">
         <div class="row mb40">
           <div class="col-md-12 text-center">
-            <h2 class="mt0 mb10 probootstrap-animate">Got some advice or song suggestions?</h2>
-            <p>Please let us know!</p>
+            <h2 class="mt0 mb10 probootstrap-animate">RSVP and song suggestions</h2>
+            <p>Please RSVP and let us know if you have any song suggestions!</p>
           </div>
         </div>
         <div class="row">
