Adding in links

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
         </div>
         <div class="row">
           <div class="col-md-6 probootstrap-animate">  
-            <p ><img src="img2/Church.png" alt="Free Bootstrap Template by uicookies.com" href="http://www.welovedonegal.com/ch-stmarys-lagg-malin-head-inishowen.html" class="img-responsive img-rounded"></p>
+            <p ><a href="http://www.welovedonegal.com/ch-stmarys-lagg-malin-head-inishowen.html" target="_blank"><img src="img2/Church.png" alt="Free Bootstrap Template by uicookies.com" class="img-responsive img-rounded"></a></p>
             <h3>Wedding Ceremony</h3>
             <p>The ceremony will be held 13:00hrs on Wednesday 31st July at St Mary’s chapel in Lagg, Inishowen – near Malin Head, one of the northernmost points of Ireland.</p>
           </div>
           <div class="col-md-6 probootstrap-animate">
-            <p><img src="img2/img_1.jpg" alt="Free Bootstrap Template by uicookies.com" href="https://www.ballyliffinlodge.com/" class="img-responsive img-rounded"></p>
+            <p><a href="https://www.ballyliffinlodge.com/" target="_blank"><img src="img2/img_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive img-rounded"></a></p>
             <h3>Wedding Party</h3>
             <p>The wedding reception will be held after the ceremony in the beautiful Ballyliffin Lodge, in the village of Ballyliffin, Donegal. Guests  will be welcomed for drink reception from 14:30hrs, and are invited to mingle until Peter manages to escape the photographer, which might take a while because Helena knows what he’s like. Then, dinner! </p>
           </div>
