--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html" title="uiCookies:Wedding">Peter <em>&amp;</em> Helena</a>
+          <a class="navbar-brand" href="index.html" title="uiCookies:Wedding">Peter <em>&amp;</em> Inger-Helena</a>
         </div>
 
         <div id="navbar-collapse" class="navbar-collapse collapse">
@@ -49,8 +49,8 @@
       <div class="container text-intro-wrap">
         <div class="row">
           <div class="col-md-12 text-center text-intro probootstrap-animate">
-            <h1>Peter <em>&amp;</em> Helena</h1>
-            <h2>Getting Married on July 31, 2019 &mdash; Ballyliffen, EIRE</h2>
+            <h1>Peter <em>&amp;</em> Inger-Helena</h1>
+            <h2>Getting Married on July 31, 2019 &mdash; Ballyliffin, EIRE</h2>
           </div>
         </div>
       </div>
