Removing alt reference

--- a/Estonian/index.html
+++ b/Estonian/index.html
@@ -79,7 +79,7 @@
             
             <div class="probootstrap-groom probootstrap-animate">
               <figure>
-                <img src="img2/groom_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+                <img src="img2/groom_1.jpg"  class="img-responsive">
               </figure>
               <span class="probootstrap-caption">PEIGMEES</span>
               <h2 class="text-center">Peter Stewart</h2>
@@ -94,7 +94,7 @@
 
             <div class="probootstrap-bride probootstrap-animate">
               <figure>
-                <img src="img2/bride_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive">
+                <img src="img2/bride_1.jpg"  class="img-responsive">
               </figure>
               <span class="probootstrap-caption">PRUUT</span>
               <h2 class="text-center">Inger-Helena Kolberg</h2>
@@ -115,12 +115,12 @@
         </div>
         <div class="row">
           <div class="col-md-6 probootstrap-animate">  
-            <p ><a href="http://www.welovedonegal.com/ch-stmarys-lagg-malin-head-inishowen.html" target="_blank"><img src="img2/Church.png" alt="Free Bootstrap Template by uicookies.com" class="img-responsive img-rounded"></a></p>
+            <p ><a href="http://www.welovedonegal.com/ch-stmarys-lagg-malin-head-inishowen.html" target="_blank"><img src="img2/Church.png"  class="img-responsive img-rounded"></a></p>
             <h3>Laulatus</h3>
             <p>Laulatus toimub kolmapäeval, 31. juulil kell 13.00 St Mary kirikus Laggis, mis asub Inishoweni poolsaarel. Läheduses asub Malin Head, Iirimaa põhjapoolseim paik.</p>
           </div>
           <div class="col-md-6 probootstrap-animate">
-            <p><a href="https://www.ballyliffinlodge.com/" target="_blank"><img src="img2/img_1.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive img-rounded"></a></p>
+            <p><a href="https://www.ballyliffinlodge.com/" target="_blank"><img src="img2/img_1.jpg"  class="img-responsive img-rounded"></a></p>
             <h3>Pulmapidu</h3>
             <p>Pärast laulatust toimub pulmapidu Ballyliffin Lodge’is Ballyliffini külas Donegali maakonnas. Külalised on palutud vahuveinivastuvõtule alatest kella 14.30-st, kus Te saate omavahel seltsida kuni Peteril õnnestub fotograafi käest pääseda. See võib aga natuke aega võtta, kuna Helena tunneb teda hästi ja näeb tema põgenemisplaanid läbi. Ja siis on aeg õhtusöögiks! </p>
           </div>
@@ -143,19 +143,19 @@
             <div class="row probootstrap-gutter30">
               <div class="col-md-6 probootstrap-animate">
                 <a class="probootstrap-image image-popup" href="img2/10577085_4410401994910_351678998520408404_n.jpg" style="background-image: url(img2/10577085_4410401994910_351678998520408404_n.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img2/10577085_4410401994910_351678998520408404_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                  <div class="probootstrap-image-for-popup"><img src="img2/10577085_4410401994910_351678998520408404_n.jpg"  class="img-responsive"></div>
                 </a>
               </div>
               <div class="col-md-6 probootstrap-animate">
                 <a class="probootstrap-image image-popup" href="img2/10624826_779892475365147_8525139435968731740_n.jpg" style="background-image: url(img2/10624826_779892475365147_8525139435968731740_n.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img2/10624826_779892475365147_8525139435968731740_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                  <div class="probootstrap-image-for-popup"><img src="img2/10624826_779892475365147_8525139435968731740_n.jpg"  class="img-responsive"></div>
                 </a>
               </div>
             </div>
             <div class="row probootstrap-gutter30">
               <div class="col-md-12 probootstrap-animate">
                 <a class="probootstrap-image image-popup" href="img2/10888413_4909965763692_4106670649988988393_n.jpg" style="background-image: url(img2/10888413_4909965763692_4106670649988988393_n.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img2/10888413_4909965763692_4106670649988988393_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                  <div class="probootstrap-image-for-popup"><img src="img2/10888413_4909965763692_4106670649988988393_n.jpg"  class="img-responsive"></div>
                 </a>
               </div>
             </div>
@@ -166,19 +166,19 @@
                 <div class="row probootstrap-gutter30">
                   <div class="col-md-12 probootstrap-animate">
                     <a class="probootstrap-image image-popup" href="img2/11391371_10200524348107919_804848276399982587_n.jpg" style="background-image: url(img2/11391371_10200524348107919_804848276399982587_n.jpg)">
-                      <div class="probootstrap-image-for-popup"><img src="img2/11391371_10200524348107919_804848276399982587_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                      <div class="probootstrap-image-for-popup"><img src="img2/11391371_10200524348107919_804848276399982587_n.jpg"  class="img-responsive"></div>
                     </a>
                   </div>
                   <div class="col-md-12 probootstrap-animate">
                     <a class="probootstrap-image image-popup" href="img2/1609726_779894392031622_1855975169193191240_n.jpg" style="background-image: url(img2/1609726_779894392031622_1855975169193191240_n.jpg)">
-                      <div class="probootstrap-image-for-popup"><img src="img2/1609726_779894392031622_1855975169193191240_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                      <div class="probootstrap-image-for-popup"><img src="img2/1609726_779894392031622_1855975169193191240_n.jpg"  class="img-responsive"></div>
                     </a>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 probootstrap-animate">
                 <a class="probootstrap-image  height-2x image-popup" href="img2/37398790_10204602100569182_2543211076976115712_n.jpg" style="background-image: url(img2/37398790_10204602100569182_2543211076976115712_n.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img2/37398790_10204602100569182_2543211076976115712_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                  <div class="probootstrap-image-for-popup"><img src="img2/37398790_10204602100569182_2543211076976115712_n.jpg"  class="img-responsive"></div>
                 </a>
               </div>
             </div>
@@ -193,19 +193,19 @@
                 <div class="row probootstrap-gutter30">
                   <div class="col-md-12 probootstrap-animate">
                     <a class="probootstrap-image image-popup" href="img2/17190470_1350605248293864_1046275243866080039_n.jpg" style="background-image: url(img2/17190470_1350605248293864_1046275243866080039_n.jpg)">
-                      <div class="probootstrap-image-for-popup"><img src="img2/17190470_1350605248293864_1046275243866080039_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                      <div class="probootstrap-image-for-popup"><img src="img2/17190470_1350605248293864_1046275243866080039_n.jpg"  class="img-responsive"></div>
                     </a>
                   </div>
                   <div class="col-md-12 probootstrap-animate">
                     <a class="probootstrap-image image-popup" href="img2/10624878_779892352031826_8276739156772441762_n.jpg" style="background-image: url(img2/10624878_779892352031826_8276739156772441762_n.jpg)">
-                      <div class="probootstrap-image-for-popup"><img src="img2/10624878_779892352031826_8276739156772441762_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                      <div class="probootstrap-image-for-popup"><img src="img2/10624878_779892352031826_8276739156772441762_n.jpg"  class="img-responsive"></div>
                     </a>
                   </div>
                 </div>
               </div>
               <div class="col-md-6 probootstrap-animate">
                 <a class="probootstrap-image  height-2x image-popup" href="img2/hero_bg_2.jpg" style="background-image: url(img2/hero_bg_2.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img2/hero_bg_2.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                  <div class="probootstrap-image-for-popup"><img src="img2/hero_bg_2.jpg"  class="img-responsive"></div>
                 </a>
               </div>
             </div>
@@ -214,19 +214,19 @@
             <div class="row probootstrap-gutter30">
               <div class="col-md-6 probootstrap-animate">
                 <a class="probootstrap-image image-popup" href="img2/painted-heart--symbol-of-love-michal-boubin.jpg" style="background-image: url(img2/painted-heart--symbol-of-love-michal-boubin.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img2/painted-heart--symbol-of-love-michal-boubin.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                  <div class="probootstrap-image-for-popup"><img src="img2/painted-heart--symbol-of-love-michal-boubin.jpg"  class="img-responsive"></div>
                 </a>
               </div>
               <div class="col-md-6 probootstrap-animate">
                 <a class="probootstrap-image image-popup" href="img2/hero_bg_3.jpg" style="background-image: url(img2/hero_bg_3.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img2/hero_bg_3.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                  <div class="probootstrap-image-for-popup"><img src="img2/hero_bg_3.jpg"  class="img-responsive"></div>
                 </a>
               </div>
             </div>
             <div class="row probootstrap-gutter30">
               <div class="col-md-12 probootstrap-animate">
                 <a class="probootstrap-image image-popup" href="img2/57417848_10205556519549060_1371657188195434496_n.jpg" style="background-image: url(img/img2/57417848_10205556519549060_1371657188195434496_n.jpg)">
-                  <div class="probootstrap-image-for-popup"><img src="img2/57417848_10205556519549060_1371657188195434496_n.jpg" alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></div>
+                  <div class="probootstrap-image-for-popup"><img src="img2/57417848_10205556519549060_1371657188195434496_n.jpg"  class="img-responsive"></div>
                 </a>
               </div>
             </div>
