Adding in google form

--- a/index.html
+++ b/index.html
@@ -243,18 +243,18 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
             <div class="probootstrap-card probootstrap-animate">
-              <form class="probootstrap-form">
+              <form class="probootstrap-form" name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSf6t6Wkox_jpPbq7PadVeBPec6Ez37hs3b2Vs-K-sKCVqdBew/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
                 <div class="form-group">
                   <label for="name">Your Name</label>
-                  <input type="text" class="form-control" id="name">
+                  <input type="text" class="form-control" name="entry.2146543052" id="entry.2146543052">
                 </div>
                 <div class="form-group">
                   <label for="email">Your Email</label>
-                  <input type="text" class="form-control" id="email">
+                  <input type="text" class="form-control" name="entry.1610571454" id="entry.1610571454">
                 </div>
                 <div class="form-group">
                   <label for="note">Note</label>
-                  <textarea name="" id="note" cols="20" rows="5" class="form-control"></textarea>
+                  <textarea name="entry.617098413" id="entry.617098413" cols="20" rows="5" class="form-control"></textarea>
                 </div>
                 <div class="form-group">
                   <input type="submit" class="btn btn-primary btn-lg" value="Send Message">
@@ -263,6 +263,8 @@
             </div>
           </div>
         </div>
+          
+<!--          https://docs.google.com/forms/d/e/1FAIpQLSf6t6Wkox_jpPbq7PadVeBPec6Ez37hs3b2Vs-K-sKCVqdBew/viewform?usp=pp_url&entry.2146543052=John+Smith&entry.1610571454=joeSmith@gmail.com&entry.617098413=Hope+this+all+works!-->
       </div>
     </section>
 
