--- a/Estonian/index.html
+++ b/Estonian/index.html
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col-md-12 text-center text-intro probootstrap-animate">
             <h1>Peter <em>&amp;</em> Inger-Helena</h1>
-            <h2>Getting Married on July 31, 2019 &mdash; Ballyliffin, EIRE</h2>
+            <h2>Abiellume 31. juulil 2019&mdash; Ballyliffinis, Iirimaal</h2>
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@
     <section class="probootstrap-section probootstrap-section-colored probootstrap-wedding-countdown">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center probootstrap-animate"><h4>The Wedding Begins In</h4></div>
+          <div class="col-md-12 text-center probootstrap-animate"><h4>Aega pulmani</h4></div>
           <div class="col-md-12 probootstrap-animate">
             <div class="date-countdown"></div>  
           </div>
@@ -247,26 +247,27 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3">
             <div class="probootstrap-card probootstrap-animate">
-              <form class="probootstrap-form">
+              <form class="probootstrap-form" name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSeNOGUhp68piC2XsWTsvk2VBjcXzC1wyzuUgcKVbm3zLg9sSA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
                 <div class="form-group">
-                  <label for="name">Nimi</label>
-                  <input type="text" class="form-control" id="name">
+                  <label for="nimi">Nimi</label>
+                  <input type="text" class="form-control" name="entry.820304189" id="entry.820304189">
                 </div>
                 <div class="form-group">
                   <label for="email">Email</label>
-                  <input type="text" class="form-control" id="email">
+                  <input type="text" class="form-control" name="entry.1014312011" id="entry.1014312011">
                 </div>
                 <div class="form-group">
-                  <label for="note">Märkus</label>
-                  <textarea name="" id="note" cols="20" rows="5" class="form-control"></textarea>
+                  <label for="märkus">Märkus</label>
+                  <textarea name="entry.1402376710" id="entry.1402376710" cols="20" rows="5" class="form-control"></textarea>
                 </div>
                 <div class="form-group">
-                  <input type="submit" class="btn btn-primary btn-lg" value="Send Message">
+                  <input type="submit" class="btn btn-primary btn-lg" value="Saada Sõnum">
                 </div>
               </form>
             </div>
           </div>
         </div>
+<!--          https://docs.google.com/forms/d/e/1FAIpQLSeNOGUhp68piC2XsWTsvk2VBjcXzC1wyzuUgcKVbm3zLg9sSA/viewform?usp=pp_url&entry.820304189=Test&entry.1014312011=TestEmail&entry.1402376710=TestMark-->
       </div>
     </section>
 
